C++11/Java 17 fixes